# minecode

./: Blocks.py  Gameplay.py  Loops.py  Mobs.py  README.md  Shapes.py  Vector.py  __init__.py  cleaned_items.json  pyproject.toml  setup.py
scr/minecode/: Agent.py  Players.py  Rollercoaster.py  castle.py  cleaned_blocks.json  pixelart.py
